--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,9 @@ body {
 .book h1 {
   margin-top: 5rem;
 }
+.book h4 {
+  color: lightblue;
+  font-size: 0.75rem;
+  letter-spacing: 1px;
+  margin-top: 0.25rem;
+}
