--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 
 .booklist {
   display: grid;
-  width: 90vw;
+  width: 70vw;
   max-width: 1170px;
   margin: 5rem auto;
   gap: 2rem;
@@ -21,6 +21,7 @@ body {
 @media screen and (min-width: 768px) {
   .booklist {
     grid-template-columns: repeat(3, 1fr);
+    align-items: start;
   }
 }
 
@@ -31,11 +32,20 @@ body {
 }
 
 .book h1 {
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 .book h4 {
   color: lightblue;
   font-size: 0.75rem;
   letter-spacing: 1px;
   margin-top: 0.25rem;
+}
+
+.book img {
+  width: 100px;
+  height: 150px;
+}
+
+.book p {
+  margin-top: 0.5rem;
 }
